--- a/vignettes/my-vignette.Rmd
+++ b/vignettes/my-vignette.Rmd
@@ -1,8 +1,28 @@
+---
+title: "my-vignette"
+output: rmarkdown::html_vignette
+vignette: >
+  %\VignetteIndexEntry{my-vignette}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
+---
+
+```{r, include = FALSE}
+knitr::opts_chunk$set(
+  collapse = TRUE,
+  comment = "#>"
+)
+```
+
+```{r setup}
+library(bHP)
+```
+
 
 
 #### Example
 
-```
+```{r, eval=FALSE}
 lam <- 100 # tuning parameter for the annaul data
 
 data(IRE) # laod the data 'IRE'
@@ -163,41 +183,8 @@ BIC(bx_ADF)
 #Error in BIC.bHP(bx_ADF) :
 #The stationary test type is adf, not BIC or none.
 
-
-#--------------- Pvalue ---------------------
-
-?Pvalue.bHP
-
-Pvalue(bx_ADF)
-
-# Retrun the value path of adf.
-# Iterated number of HP filter: 19
-# [1] 0.26932206 0.16154351 0.10943027 0.09301570 0.08624282 0.08172733 0.07880462 0.07692725
-# [9] 0.07561611 0.07449014 0.07326910 0.07175650 0.06981805 0.06736339 0.06433257 0.06068690
-# [17] 0.05640284 0.05146806 0.04785197
-
-
-### If the test type is not "adf", Pvalue.bHP will return error
-
-# raw HP filter
-
-Pvalue(bx_HP)
-
-# Error in Pvalue.bHP(bx_HP) :
-# The stationary test type is none-iter, not ADF.
-
-# by BIC
-
-Pvalue(bx_BIC)
-
-# Error in Pvalue.bHP(bx_BIC) : The stationary test type is BIC, not ADF.
-
-# by none test type
-# Iterated HP filter until Max_Iter and keep the path of BIC.
-
-Pvalue(bx_none)
-
-#Error in Pvalue.bHP(bx_none) : The stationary test type is none, not ADF.
-
 ```
+
+
+
 
