--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -1,10 +1,19 @@
 ---
 title: "Boosted HP Filter"
-output: rmarkdown::html_vignette
-vignette: >
-  %\VignetteIndexEntry{my-vignette}
-  %\VignetteEngine{knitr::rmarkdown}
-  %\VignetteEncoding{UTF-8}
+author: "Yang Chen and Zhentao Shi"
+date: \today
+output:
+  rmarkdown::pdf_document: default
+  # rmarkdown::html_vignette: default
+description: nothing
+geometry: margin=1in
+bibliography: REFERENCES.bib
+biblio-style: apalike
+link-citations: yes
+fontsize: 12pt
+urlcolor: blue
+vignette: |
+  %\VignetteIndexEntry{my-vignette} %\VignetteEngine{knitr::rmarkdown} %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
@@ -19,10 +28,19 @@ knitr::opts_chunk$set(
 library(bHP)
 ```
 
+## Introduction
+
+The Hodrick-Prescott filter (HP filter; @hodrick1997postwar) is one of the fundamental statistical 
+tools in macroeconomic data analysis. 
+Since it was proposed in 1982 in a working paper by Hodrick and Prescott, it has been widely used in empirical
+macroeconomics thanks to its simplicity. As an operational algorithm, its pros and cons have been debated over
+decades, and recently we have witnessed renewed academic interest in its properties and extensions. 
+This vignette introduces the HP filter, the boosted HP filter, and the usage of the R package
+`bHP`. 
+
 ## HP filter
 
-The Hodrick-Prescott filter (HP filter; Hodrick and Prescott, 1997) is one of the fundamental statistical 
-tools. Given time series data $(x_{t})_{t=1}^n$
+Given time series data $(x_{t})_{t=1}^n$
 the HP method decomposes the series into
 two additive components --- a trend component $f_{t}$
 and a residual or cyclical component $c_{t}$, estimated as
@@ -55,12 +73,13 @@ trend and
 \]
 as the estimated cyclical or stationary component. 
 
-In practice, Hodrick and Prescott (1997) recommend $\lambda=1600$ for quarterly data, and this number and its sampling frequency adjusted version (Ravn and Uhlig, year) are widely adopted in applications. However, recent research (Phillips and Jin, 2015; Hamilton 2018) find the "gold standard" is unsatisfactory for the length of time series that often encountered in macroeconomic studies.
+In practice, @hodrick1997postwar recommend $\lambda=1600$ for quarterly data, and this number and its sampling frequency adjusted version @ravn2002adjusting are widely adopted in applications. However, recent research 
+(@phillips2015business; hamilton2017you) find the "gold standard" is unsatisfactory for the length of time series that often encountered in macroeconomic studies.
 
 
 ## Boosted HP filter
 
-Phillips and Shi (2019) propose the boosted HP filter (bHP). The intuition is that, if the cyclical component $\widehat{c}_{t}^{\mathrm{HP}}$ still exhibits trending behavior after HP filtering, we continue to apply the HP filter to
+@Phillips2019boosting propose the boosted HP filter (bHP). The intuition is that, if the cyclical component $\widehat{c}_{t}^{\mathrm{HP}}$ still exhibits trending behavior after HP filtering, we continue to apply the HP filter to
 $\widehat{c}^{\mathrm{HP}}$ to remove the leftover trend residual. After a second fitting, the cyclical component can be written as
 \[
 \widehat{c}^{\left(2\right)}=\left(I_{n}-S\right)\widehat{c}^{\mathrm{HP}}=\left(I_{n}-S\right)^{2}x,
@@ -87,23 +106,35 @@ The user chooses the two tuning parameters `lambda` for $\lambda$ and `stopping`
 * `adf` for the ADF stopping criterion (default $p$-value is 5\%)
 * `nonstop` keeps iteration until it reaches `Max_iter` (default is 100 iterations).
 
-
 ## Examples
 
-```{r}
+```{r, message=FALSE}
 lam <- 100 # tuning parameter for the annual data
 data(IRE) # load the data 'IRE'
 
-bx_HP <- BoostedHP(IRE, lambda = lam, iter= FALSE)$cycle
-bx_BIC <- BoostedHP(IRE, lambda = lam, stopping = "BIC")$cycle
-bx_ADF <- BoostedHP(IRE, lambda = lam, stopping = "adf")$cycle
+bx_HP <- BoostedHP(IRE, lambda = lam, iter= FALSE)$trend
+bx_BIC <- BoostedHP(IRE, lambda = lam, stopping = "BIC")$trend
+bx_ADF <- BoostedHP(IRE, lambda = lam, stopping = "adf")$trend
+bx_nonstop <- BoostedHP(IRE, lambda = lam, iter= TRUE, 
+                        stopping = "nonstop")$trend
 
-bx_nonstop <- BoostedHP(IRE, lambda = lam, iter= TRUE, stopping = "nonstop") %>% residuals()
+matplot( y = cbind(IRE, bx_HP, bx_BIC, bx_ADF, bx_nonstop), 
+         type = "l", x = 1981:2016,
+         ylab = "value", xlab = "year", main = "Ireland Annual GDP")
+legend("bottomright", legend = c("data","HP", "BIC", "ADF", "nonstop"), 
+       col = 1:5, lty = 1:5)
+```
+The trend and cycle can also be extracted by the generic methods `predict` and `residuals`, respectively. 
 
-matplot( cbind(IRE, bx_HP, bx_BIC, bx_ADF, bx_nonstop))
+
+```{r}
+bx <- BoostedHP(IRE, lambda = lam, stopping = "BIC")
+IRE_trend <- predict(bx)
+IRE_cycle <- residuals(bx)
 ```
 
-```{r, eval=FALSE}
+
+```{r, eval=FALSE, echo=FALSE}
 #-------- plot -----------
 
 ?plot.bHP
@@ -248,6 +279,7 @@ BIC(bx_ADF)
 
 ```
 
+## References
 
 
 
