--- a/vignettes/vignette.Rmd
+++ b/vignettes/vignette.Rmd
@@ -32,7 +32,7 @@ knitr::opts_chunk$set(
 
 \begin{figure}[h]
 \centering
-\includegraphics[width = 13cm]{bHP_illustration}
+\includegraphics[width = 12cm]{bHP_illustration}
 \caption*{Illustartion of bHP, by Iris Shi}
 \end{figure}
 
@@ -50,10 +50,10 @@ The Hodrick-Prescott filter (HP filter; @hodrick1997postwar) is one of the funda
 tools in macroeconomic data analysis. 
 Thanks to its simplicity, it has been widely used in empirical
 macroeconomics studies. As an operational algorithm, its pros and cons have been debated over
-decades, and recently we have witnessed renewed academic interest in its properties and extensions. 
+decades, and academic interest has been renewed in recent years to investigate its properties and extensions. 
 While @hamilton2017you argues against the usage of the HP filter, @Phillips2019boosting propose a
-machine learning version of the HP filter, called the boosted HP filter (bHP), to strength its flexibility
-with theoretical guarantee for a large class of trended time series in macroeconomic 
+machine learning enhancement of the original HP filter, called the boosted HP filter (bHP), 
+and establish consistency when it is applied to a large class of trended time series in macroeconomic 
 applications.
 
 
@@ -71,10 +71,10 @@ and a cyclical component (residual) $c_{t}$. The trend is estimated as
 where $\Delta f_{t}=f_{t}-f_{t-1}$,
 and $\Delta^2 f_{t}= \Delta f_{t}- \Delta f_{t-1} = f_{t}- 2 f_{t-1} + f_{t-2}$,
 and $\lambda\geq 0$
-is a tuning parameter that controls the extent of the penalty.
+is a tuning parameter that controls the level of the penalty.
 The corresponding cycle is 
 \[
-(\hat{c}_{t}^\mathrm{HP} )=( x_t-\hat{f}_{t}^\mathrm{HP}) 
+(\hat{c}_{t}^\mathrm{HP} )=( x_t-\hat{f}_{t}^\mathrm{HP}). 
 \]
 
 The optimization problem admits a closed form solution. 
@@ -82,7 +82,8 @@ The estimated trend can be written as
 \begin{equation}
 \widehat{f}^{\mathrm{HP}}=S x,
 \end{equation}
-where $S$ is a deterministic $n\times n$ matrix and $x=(x_1,...,x_n)'$ is the sample data, and   the estimated 
+where $S$ is a deterministic $n\times n$ matrix and $x=(x_1,...,x_n)'$ is the sample data.
+The estimated 
 trend is
 \[
 \widehat{c}^{\mathrm{HP}}=\left(I_{n}-S\right)x,
@@ -96,7 +97,7 @@ In practice, @hodrick1997postwar recommend $\lambda=1600$ for quarterly data, an
 
 ## Boosted HP filter
 
-@Phillips2019boosting propose the boosted HP filter (bHP). The intuition is that, if the cyclical component $\widehat{c}_{t}^{\mathrm{HP}}$ still exhibits trending behavior after HP filtering, we continue to apply the HP filter to
+The intuition of bHP is that, if the cyclical component $\widehat{c}_{t}^{\mathrm{HP}}$ still exhibits trending behavior after HP filtering, we continue to apply the HP filter to
 $\widehat{c}^{\mathrm{HP}}$ to remove the leftover trend residual. After a second fitting, the cyclical component can be written as
 \[
 \widehat{c}^{\left(2\right)}=\left(I_{n}-S\right)\widehat{c}^{\mathrm{HP}}=\left(I_{n}-S\right)^{2}x,
@@ -108,19 +109,20 @@ filter is fitted twice. The corresponding trend component becomes
 \]
 If $\widehat{c}^{\left(2\right)}$ continues to exhibit trend behavior, the filtering process may be continued for a third or further time. 
 After $m$ repeated applications of the filter, the cyclical and trend component are 
-\begin{eqnarray}
+\begin{eqnarray*}
 	\widehat{c}^{\left(m\right)} & = &  \left(I_{n}-S\right)\widehat{c}^{\left(m-1\right)}=\left(I_{n}-S\right)^{m}x \\
 	\widehat{f}^{\left(m\right)} & = & x-\widehat{c}^{\left(m\right)}.
-\end{eqnarray}
+\end{eqnarray*}
 
-The boosted HP filter introduces the number of iterations $m$ as an additional tuning parameter. In practice, it is recommended that we choose $\lambda$ according to the convention, say $\lambda = 1600$ for quarterly data, and then monitor a stopping criterion as the iteration proceeds. @Phillips2019boosting suggest using either the ADF test or the Bayesian Information Criterion (BIC) to terminate the iteration.
+The number of iterations $m$ is an additional tuning parameter in bHP. In practice, it is recommended that we choose $\lambda$ according to the convention, say $\lambda = 1600$ for quarterly data, and then monitor a stopping criterion as the iteration proceeds. @Phillips2019boosting suggest using either the ADF test or the Bayesian Information Criterion (BIC) to terminate the iteration.
 
-This package `bHP` automates the boosted HP filter. The main function is `BoostedHP`. 
-The user chooses the two tuning parameters `lambda` for $\lambda$ and `stopping` for the stopping criterion. In particular, `stopping` has three options:
+This package `bHP` automates bHP. The main function is `BoostedHP`. 
+The user chooses the two tuning parameters `lambda` for $\lambda$ and `stopping` for the stopping criterion. In particular, three options are available for `stopping`:
 
-* `BIC` for the BIC stopping criterion
-* `adf` for the ADF stopping criterion (default $p$-value 5\%)
-* `nonstop` keeps iteration until it reaches `Max_iter` (default is 100 iterations).
+* `"BIC"` for the BIC stopping criterion
+* `"adf"` for the ADF stopping criterion (default $p$-value 5\%)
+* `"nonstop"` keeps iteration until it reaches `Max_iter` (default is 100 iterations).
+
 
 The basic usage with the default options is as follows:
 ```{r, eval=FALSE}
@@ -128,12 +130,14 @@ BoostedHP(x, lambda = 1600, iter= TRUE, stopping = "BIC", Max_Iter = 100)
 ```
 The above line produces an object of  the `bHP` class. We can extract the trend by `$trend`, the 
 cycle by `$cycle`. The sequence of trend for each iteration is stored in `$trend_hist`, 
-and `$iter_num` reports the number of iterations.
+and `$iter_num` reports the number of iterations. 
+The original HP filter can also be implemented by setting `iter = FALSE` along with a `lambda`.
+
 
 ## Examples
 
-One of the applications in a series in @Phillips2019boosting is concerning the 
-international comparison of the Okun's law. We use Ireland's annual GDP there for illustration. 
+One of the applications in @Phillips2019boosting is concerning the 
+international comparison of the Okun's law. We use Ireland's annual GDP here for illustration. 
 
 ```{r, message=FALSE}
 lam <- 100 # tuning parameter for the annual data
@@ -157,16 +161,15 @@ The trend and cycle can also be extracted by the generic methods `predict` and `
 
 ```{r}
 bx <- BoostedHP(IRE, lambda = lam, stopping = "BIC")
-IRE_trend <- predict(bx)
 IRE_cycle <- residuals(bx)
 ```
 
 ## Version
 
-This is the two authors first R package released on `github`, labeled with Version 1.0. 
-The main function `BoostedHP` and associated methods `predict`, `residual` and `BIC` are complete and 
+This is our first R package released on `github`, labeled with Version 1.0. 
+The main function `BoostedHP` and associated methods `predict`, `residuals` and `BIC` are complete and 
 well documented. 
-The package also contains a few experimental generic methods `print`, `plot` and `summary`, 
+The package also contains experimental generic methods `print`, `plot` and `summary`, 
 which are still preliminary. 
 
 
